get best and worse images

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 # Build and Release Folders
 bin-debug/
 bin-release/
@@ -6,12 +11,18 @@ bin-release/
 
 # Other files and folders
 .settings/
+.vscode/
+save/
 
 # Executables
 *.swf
 *.air
 *.ipa
 *.apk
+
+# Big data files
+* .pth
+visualization/saved_data/*.pth
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
