--- a/configs/test_mva_network.yaml
+++ b/configs/test_mva_network.yaml
@@ -3,7 +3,7 @@ test_dataloader_args: {
     dataset_args:
       {
         split: test,
-        augment: default  # clip, default
+        augment: clip  # clip, default
       },
     sampler_name: metatasks-sampler,
     sampler_args: 
@@ -18,10 +18,10 @@ test_dataloader_args: {
 
 network_args:
   {
-    model_name: mva-network,  # resnet12, clip
+    model_name: mva-network,
     model_args:
       {
-        encoder_name: resnet12,
+        encoder_name: clip,  # resnet12, clip
         encoder_args: {},
         encoder_load_para:
           {
