--- a/configs/test_mva_network_for_mushi.yaml
+++ b/configs/test_mva_network_for_mushi.yaml
@@ -3,7 +3,7 @@ test_dataloader_args: {
     dataset_args:
       {
         split: val,
-        augment: default,  # clip, default
+        augment: clip,  # clip, default
         type: sim_data,
         shot_num: 0,
         query_num: 100,  # 所有数据作为测试集, 即: 共5类, 每类100张图像
@@ -25,15 +25,15 @@ network_args:
     model_name: mva-network,
     model_args:
       {
-        encoder_name: resnet12,  # resnet12, clip
+        encoder_name: clip,  # resnet12, clip
         encoder_args: {},
         encoder_load_para:
           {
             load_old_encoder: /space1/zhaoqing/code/few_shot_meta_baseline/save/pre_meta_2_stage/linear/metabasepre2/max-tva.pth,
           },
-        mva_name: w-attention,  # w-attention
+        mva_name: dot-attention,  # w-attention
         mva_args: {
-          update: True  # True
+          update: False  # True
         },
         task_info: {
           batch_size: 1,
