--- a/configs/test_encoder_fsl_for_mushi.yaml
+++ b/configs/test_encoder_fsl_for_mushi.yaml
@@ -3,7 +3,7 @@ test_dataloader_args: {
     dataset_args:
       {
         split: val,
-        augment: default,  # clip, default
+        augment: clip,  # clip, default
         type: sim_data,
         shot_num: 0,
         query_num: 100,  # 所有数据作为测试集, 即: 共5类, 每类100张图像
@@ -22,7 +22,7 @@ test_dataloader_args: {
 
 network_args:
   {
-    model_name: resnet12,  # resnet12, clip
+    model_name: clip,  # resnet12, clip
     model_args:
       { 
       },
