--- a/configs/train_for_mushi.yaml
+++ b/configs/train_for_mushi.yaml
@@ -83,14 +83,14 @@ network_args:
       {
         encoder_name: resnet18,
         encoder_args: {},
+        encoder_load_para: 
+          {
+            load_pure_encoder: /space1/zhaoqing/code/graceful-few-shot/models/backbone/pretrained/resnet18-f37072fd.pth,
+          },
         classifier_name: linear-classifier,
         classifier_args: {
             class_num: 5, # 5
           },
-      },
-    model_load_para:
-      {
-        load_pure_encoder: /space1/zhaoqing/code/graceful-few-shot/models/backbone/pretrained/resnet18-f37072fd.pth,
       },
   }
 
