--- a/configs/test_encoder_fsl_patch.yaml
+++ b/configs/test_encoder_fsl_patch.yaml
@@ -3,7 +3,8 @@ test_dataloader_args: {
     dataset_args:
       {
         split: test,
-        augment: clip  # clip, default
+        patch_type: sampling,
+        augment: clip,  # clip, default
       },
     sampler_name: metatasks-sampler,
     sampler_args: 
