--- a/configs/test_mva_network_task.yaml
+++ b/configs/test_mva_network_task.yaml
@@ -28,11 +28,11 @@ network_args:
           {
             load_old_encoder: /space1/zhaoqing/code/few_shot_meta_baseline/save/pre_meta_2_stage/linear/metabasepre2/max-tva.pth,
           },
-        mva_name: key-attention,
+        mva_name: task-attention,
         mva_args: {
           update: True,
           shot_num: 20,  # shot_num = patch_num*origin_shot_num
-          key_type: point,
+          key_type: task_meta,
         },
         task_info: {
           batch_size: 1,
