--- a/configs/train_meta_patch_mva_network.yaml
+++ b/configs/train_meta_patch_mva_network.yaml
@@ -66,7 +66,7 @@ network_args: {
           inner_choice_num: 2,
           inner_use_l1: False,
           outer_epoch: 1,
-          outer_optimizer_name: sgd, # adam,
+          outer_optimizer_name: adam, # adam,
           outer_optimizer_args: {
             lr: 0.001,
             weight_decay: 5.e-4
@@ -77,6 +77,6 @@ network_args: {
 }
 
 trainer_args: {
-  full_epoch: 100,
+  full_epoch: 1000,
   save_epoch: 1
 }
