--- a/configs/train_meta_patch_mva_network.yaml
+++ b/configs/train_meta_patch_mva_network.yaml
@@ -50,6 +50,7 @@ network_args: {
         mva_name: meta-attention,
         mva_args: {
           shot_num: 20,  # shot_num = patch_num*origin_shot_num
+          nor_type: l2_norm  # 'softmax'
         },
         task_info: {
           batch_size: 1,
