--- a/configs/train_meta_patch_mva_network.yaml
+++ b/configs/train_meta_patch_mva_network.yaml
@@ -50,8 +50,8 @@ network_args: {
         mva_name: meta-attention,
         mva_args: {
           shot_num: 20,  # shot_num = patch_num*origin_shot_num, 14
-          nor_type: softmax,  # 'softmax', 'l2_norm'
-          similarity_method: 'cos'
+          nor_type: l2_norm,  # 'softmax', 'l2_norm'
+          similarity_method: 'pass'  # cos
         },
         task_info: {
           batch_size: 1,
@@ -63,7 +63,7 @@ network_args: {
         patch_mode: default,
         meta_info: {
           inner_epoch: 30,
-          inner_lr: 0.001,
+          inner_lr: 0.1,
           inner_aug_type: 'zero',
           inner_choice_num: 2,
           inner_use_l1: False,
