--- a/configs/train_meta_patch_mva_network.yaml
+++ b/configs/train_meta_patch_mva_network.yaml
@@ -44,14 +44,14 @@ network_args: {
         encoder_args: {},
         encoder_load_para:
           {
-            # load_old_encoder: /space1/zhaoqing/code/few_shot_meta_baseline/save/pre_meta_2_stage/linear/metabasepre2/max-tva.pth,
-            load_old_encoder: /space0/songk/code/graceful-few-shot/save/old_ckpt/pre_meta_2_stage/max-tva.pth,
+            load_old_encoder: /space1/zhaoqing/code/few_shot_meta_baseline/save/pre_meta_2_stage/linear/metabasepre2/max-tva.pth,
+            # load_old_encoder: /space0/songk/code/graceful-few-shot/save/old_ckpt/pre_meta_2_stage/max-tva.pth,
           },
         mva_name: meta-attention,
         mva_args: {
           shot_num: 20,  # shot_num = patch_num*origin_shot_num, 14
           nor_type: l2_norm,  # 'softmax', 'l2_norm'
-          similarity_method: 'pass'  # cos
+          similarity_method: 'cos'  # cos
         },
         task_info: {
           batch_size: 1,
@@ -67,7 +67,7 @@ network_args: {
           inner_aug_type: 'zero',
           inner_choice_num: 2,
           inner_use_l1: False,
-          inner_enhance_threshold: 0.0, 
+          inner_enhance_threshold: 0.6, 
           inner_enhance_top: 20,
           outer_epoch: 1,
           outer_optimizer_name: adam, # adam,
@@ -75,7 +75,7 @@ network_args: {
             lr: 0.01,
             weight_decay: 5.e-4
           },
-          outer_enhance_threshold: 0.6, 
+          outer_enhance_threshold: 0.0, 
           outer_enhance_top: 10,
           use_continue_loss: True,
           continue_loss_weight: 1.0,
